fix white space

--- a/web/client/themes/default/less/sliders.less
+++ b/web/client/themes/default/less/sliders.less
@@ -276,7 +276,7 @@
         width: fit-content;
         font-size: 10px;
         cursor: default;
-        white-space: normal;
+        white-space: nowrap;
         -webkit-transform-origin: var(--ms-filter-slider-tick-origin, center center);
         transform-origin: var(--ms-filter-slider-tick-origin, center center);
         -webkit-transform: translate3d(var(--ms-filter-slider-tick-translate-x, -50%), var(--ms-filter-slider-tick-translate-y, -50%), 0) rotate(var(--ms-filter-slider-tick-angle, -90deg));
